force-app/main/default/objects/SRM_Jira_Ticket__c/SRM_Jira_Ticket__c.object-meta.xml
<CustomObject>
    <label>Metadata Deployment</label>
    <nameField>
        <displayFormat>MDD-{0000000}</displayFormat>
        <label>Deployment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Deployments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>