force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Approx_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Approx_Deployment_Date__c</fullName>
    <label>Production Deployment Date</label>
    <type>DateTime</type>
</CustomField>