force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Connected_Org__c.field-meta.xml
<CustomField>
    <fullName>Connected_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Org</label>
    <referenceTo>SRM_Connected_Org__c</referenceTo>
    <relationshipName>Jira_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>