force-app/main/default/objects/SRM_Jira_Ticket__c/fields/CRM_Sprint__c.field-meta.xml
<CustomField>
    <fullName>CRM_Sprint__c</fullName>
    <label>CRM Sprint</label>
    <referenceTo>SRM_CRM_Sprint__c</referenceTo>
    <relationshipLabel>Metadata Deployments</relationshipLabel>
    <relationshipName>Jira_Tickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>