force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Deployed_Apex_Names__c.field-meta.xml
<CustomField>
    <fullName>Deployed_Apex_Names__c</fullName>
    <label>Deployed Apex Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>