force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Deployed_to_Integration_Environment__c.field-meta.xml
<CustomField>
    <fullName>Deployed_to_Integration_Environment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deployed to Integration Environment</label>
    <type>Checkbox</type>
</CustomField>