force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Fire_New_Apex_Notification__c.field-meta.xml
<CustomField>
    <fullName>Fire_New_Apex_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fire New Apex Notification</label>
    <type>Checkbox</type>
</CustomField>