force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Friendly_description_of_Apex_changes__c.field-meta.xml
<CustomField>
    <fullName>Friendly_description_of_Apex_changes__c</fullName>
    <description>Enter a short and friendly description of what changes you made to Apex code. This will be included in an email notification that goes out to the CRM team when the deployment contains apex code.</description>
    <inlineHelpText>Enter a short and friendly description of what changes you made to Apex code. This will be included in an email notification that goes out to the CRM team when the deployment contains apex code.</inlineHelpText>
    <label>Friendly description of Apex changes</label>
    <type>TextArea</type>
</CustomField>