force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Generate_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Generate_Session_ID__c</fullName>
    <formula>$Api.Session_ID</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Session ID</label>
    <type>Text</type>
</CustomField>