force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Git_Pull_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Git_Pull_Request_URL__c</fullName>
    <inlineHelpText>The URL generated by the &quot;git push -u origin &lt;branch_name&gt; command, for example https://github.com/websummit/sfdc/pull/new/CRM-516-517v2</inlineHelpText>
    <label>Git Pull Request URL</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>