force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Level_of_Effort_hours__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Effort_hours__c</fullName>
    <label>Level of Effort (hours)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>