force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Metadata_Members_to_be_Created__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Members_to_be_Created__c</fullName>
    <label>Metadata Members to be Created</label>
    <summaryFilterItems>
        <field>SRM_Metadata__c.Deployment_Type__c</field>
        <operation>equals</operation>
        <value>Brand new metadata</value>
    </summaryFilterItems>
    <summaryForeignKey>SRM_Metadata__c.Jira_Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>