force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Metadata_Members_to_be_Updated__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Members_to_be_Updated__c</fullName>
    <label>Metadata Members to be Updated</label>
    <summaryFilterItems>
        <field>SRM_Metadata__c.Deployment_Type__c</field>
        <operation>equals</operation>
        <value>&quot;Existing, updated metadata&quot;</value>
    </summaryFilterItems>
    <summaryForeignKey>SRM_Metadata__c.Jira_Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>