force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>David</fullName>
            </value>
            <value>
                <fullName>Kasia</fullName>
            </value>
            <value>
                <fullName>Pablo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>