force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Rebased_By__c.field-meta.xml
<CustomField>
    <fullName>Rebased_By__c</fullName>
    <label>Rebased By</label>
    <length>250</length>
    <type>Text</type>
</CustomField>