force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Deployment</fullName>
                <default>true</default>
                <label>Awaiting Deployment</label>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
                <isActive>false</isActive>
                <label>Done</label>
            </value>
            <value>
                <fullName>In Design</fullName>
                <isActive>false</isActive>
                <label>In Design</label>
            </value>
            <value>
                <fullName>In QA</fullName>
                <isActive>false</isActive>
                <label>In QA</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Prioritized</fullName>
                <isActive>false</isActive>
                <label>Prioritized</label>
            </value>
            <value>
                <fullName>Ready for Deployment</fullName>
                <isActive>false</isActive>
                <label>Ready for Deployment</label>
            </value>
            <value>
                <fullName>Ready for Development</fullName>
                <isActive>false</isActive>
                <label>Ready for Development</label>
            </value>
            <value>
                <fullName>Ready for QA</fullName>
                <isActive>false</isActive>
                <label>Ready for QA</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>