force-app/main/default/objects/SRM_Jira_Ticket__c/fields/Total_Metadata_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Metadata_Members__c</fullName>
    <label>Total Metadata Members</label>
    <summaryForeignKey>SRM_Metadata__c.Jira_Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>