force-app/main/default/objects/SRM_Jira_Ticket__c/fields/View_in_Jira__c.field-meta.xml
<CustomField>
    <fullName>View_in_Jira__c</fullName>
    <formula>HYPERLINK(&quot;https://cilabs.atlassian.net/browse/&quot; &amp;  Name , Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View in Jira</label>
    <type>Text</type>
</CustomField>