force-app/main/default/objects/SRM_Jira_Ticket__c/validationRules/Github_URL_must_be_valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Github_URL_must_be_valid</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(Git_Pull_Request_URL__c ))  

&amp;&amp; 


NOT(BEGINS(Git_Pull_Request_URL__c, &quot;https://github.com/websummit/sfdc/pull/new/&quot;))</errorConditionFormula>
    <errorDisplayField>Git_Pull_Request_URL__c</errorDisplayField>
    <errorMessage>This is not a valid Github Pull Request URL.</errorMessage>
</ValidationRule>