force-app/main/default/objects/SRM_Jira_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Case_Subject__c</columns>
    <columns>Owner__c</columns>
    <columns>Rebased_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>