force-app/main/default/objects/SRM_Jira_Ticket__c/listViews/Apex_Trigger_Standarisation.listView-meta.xml
<ListView>
    <fullName>Apex_Trigger_Standarisation</fullName>
    <columns>NAME</columns>
    <columns>Case_Subject__c</columns>
    <columns>Rebased_By__c</columns>
    <columns>Connected_Org__c</columns>
    <columns>Git_Pull_Request_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case__c</field>
        <operation>equals</operation>
        <value>00002022</value>
    </filters>
    <label>Apex Trigger Standarisation</label>
</ListView>