force-app/main/default/objects/SRM_Jira_Ticket__c/listViews/Create_Hot_Propsal_Stage_before_rebase.listView-meta.xml
<ListView>
    <fullName>Create_Hot_Propsal_Stage_before_rebase</fullName>
    <columns>NAME</columns>
    <columns>CRM_Sprint__c</columns>
    <columns>Status__c</columns>
    <columns>Connected_Org__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Title__c</field>
        <operation>equals</operation>
        <value>New Opportunity stage &quot;Late Stage Proposal&quot;</value>
    </filters>
    <label>rabase:Create Late Stage Proposal</label>
</ListView>