force-app/main/default/objects/SRM_Jira_Ticket__c/listViews/Deployed_to_Integration_Last_Month.listView-meta.xml
<ListView>
    <fullName>Deployed_to_Integration_Last_Month</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Owner__c</columns>
    <columns>Rebased_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approx_Deployment_Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Deployed to Production Last Month</label>
</ListView>