force-app/main/default/objects/SRM_Jira_Ticket__c/listViews/Lightning.listView-meta.xml
<ListView>
    <fullName>Lightning</fullName>
    <columns>NAME</columns>
    <columns>Case_Number__c</columns>
    <columns>Case_Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRM_Sprint__c</field>
        <operation>equals</operation>
        <value>Lightning</value>
    </filters>
    <label>Lightning</label>
</ListView>