force-app/main/default/objects/SRM_Jira_Ticket__c/listViews/Stories_To_Rebase_Pablo.listView-meta.xml
<ListView>
    <fullName>Stories_To_Rebase_Pablo</fullName>
    <columns>NAME</columns>
    <columns>Case_Subject__c</columns>
    <columns>Approx_Deployment_Date__c</columns>
    <columns>Owner__c</columns>
    <columns>Rebased_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Done,Deployed</value>
    </filters>
    <filters>
        <field>Owner__c</field>
        <operation>notEqual</operation>
        <value>Pablo</value>
    </filters>
    <filters>
        <field>Rebased_By__c</field>
        <operation>notContain</operation>
        <value>Pablo</value>
    </filters>
    <label>Stories To Rebase - Pablo</label>
</ListView>