force-app/main/default/objects/SRM_Jira_Ticket__c/listViews/Stories_To_Rebase_Regina.listView-meta.xml
<ListView>
    <fullName>Stories_To_Rebase_Regina</fullName>
    <columns>NAME</columns>
    <columns>Case_Subject__c</columns>
    <columns>Approx_Deployment_Date__c</columns>
    <columns>Owner__c</columns>
    <columns>Rebased_By__c</columns>
    <columns>Status__c</columns>
    <columns>Friendly_description_of_Apex_changes__c</columns>
    <columns>Git_Pull_Request_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Done,Deployed</value>
    </filters>
    <filters>
        <field>Owner__c</field>
        <operation>notEqual</operation>
        <value>Regina</value>
    </filters>
    <filters>
        <field>Rebased_By__c</field>
        <operation>notContain</operation>
        <value>Regina</value>
    </filters>
    <label>Stories To Rebase - Regina</label>
</ListView>